# Lab-Fast

./: .gitignore  CMakeLists.txt  makefile  muon.c  muon.h  muon.py  output.txt  readbin.c  run.py  tobin.c
low_temp_cal/: lowtempcal.py  main.py  span_selector.py  temp_graph.py
low_temp_cal/data/: 10v.txt  11V.csv  11v.txt  3v.txt  4v.txt  5v.txt  6v.txt  7v.txt  8v.txt  9v.txt
low_temp_cal/gui/: labfast.pro  lowtempcal.py  main.py  mainwindow.ui
low_temp_cal/rawdata/: 2v  3V.csv  4v  5V.csv  6v  7V.csv  8v
lowtempcal/: __init__.py  bokeh_graph.py  gui.py  index.html  lowtempcal.py  mainwindow.ui  tobin.py  util.py
lowtempcal/binary_data/: 4V  5V  9V
lowtempcal/data/: 2v  9V
matplotlib_examples/: hist_slider.py  linebuilder.py
muonlifetime/: muonlifetime.py
